<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:scaleType="fitXY"
        android:src="@mipmap/login_back"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/login"
        android:gravity="center"
        android:layout_marginTop="278dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_baseline_account_box_24"/>
            <EditText
                android:id="@+id/log_account"
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:textSize="18sp"
                android:hint="@string/account"
                android:textColor="@color/black"
                android:textColorHint="#bcbcbc"/>

        </LinearLayout>
        <View
            android:layout_marginTop="23dp"
            android:layout_marginBottom="23dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#e8e7e7"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_baseline_password_24"/>
            <EditText
                android:id="@+id/log_password"
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:textSize="18sp"
                android:hint="@string/password"
                android:textColor="@color/black"
                android:textColorHint="#bcbcbc"/>

        </LinearLayout>
        <Button
            android:id="@+id/login_btn"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:layout_marginTop="67dp"
            android:text="@string/app_register"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/login_btn"/>

    </LinearLayout>

</RelativeLayout>